@@ -26,7 +26,6 @@ import io.airlift.compress.v3.snappy.SnappyNativeCompressor;
 import io.airlift.compress.v3.zstd.ZstdNativeCompressor;
 import io.airlift.http.server.HttpServerModule;
 import io.airlift.jaxrs.JaxrsModule;
-import io.airlift.jmx.JmxHttpModule;
 import io.airlift.jmx.JmxModule;
 import io.airlift.json.JsonModule;
 import io.airlift.log.LogJmxModule;
@@ -35,7 +34,6 @@ import io.airlift.node.NodeModule;
 import io.airlift.openmetrics.JmxOpenMetricsModule;
 import io.airlift.tracing.TracingModule;
 import io.airlift.units.Duration;
-import io.trino.client.NodeVersion;
 import io.trino.connector.CatalogManagerModule;
 import io.trino.connector.CatalogStoreManager;
 import io.trino.connector.ConnectorServicesProvider;
@@ -56,6 +54,7 @@ import io.trino.server.security.HeaderAuthenticatorManager;
 import io.trino.server.security.PasswordAuthenticatorManager;
 import io.trino.server.security.ServerSecurityModule;
 import io.trino.server.security.oauth2.OAuth2Client;
+import io.trino.spi.NodeVersion;
 import io.trino.transaction.TransactionManagerModule;
 import io.trino.util.EmbedVersion;
 import org.weakref.jmx.guice.MBeanModule;
@@ -63,7 +62,6 @@ import org.weakref.jmx.guice.MBeanModule;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -100,7 +98,6 @@ public class Server
                 new MBeanModule(),
                 new PrefixObjectNameGeneratorModule("io.trino"),
                 new JmxModule(),
-                new JmxHttpModule(),
                 new JmxOpenMetricsModule(),
                 new LogJmxModule(),
                 new TracingModule("trino", trinoVersion),
@@ -123,13 +120,13 @@ public class Server
         try {
             Injector injector = app.initialize();
 
-            log.info("Trino version: %s", injector.getInstance(NodeVersion.class).getVersion());
+            log.info("Trino version: %s", injector.getInstance(NodeVersion.class).version());
             log.info("Zstandard native compression: %s", formatEnabled(ZstdNativeCompressor.isEnabled()));
             log.info("Lz4 native compression: %s", formatEnabled(Lz4NativeCompressor.isEnabled()));
             log.info("Snappy native compression: %s", formatEnabled(SnappyNativeCompressor.isEnabled()));
 
-            logLocation(log, "Working directory", Paths.get("."));
-            logLocation(log, "Etc directory", Paths.get("etc"));
+            logLocation(log, "Working directory", Path.of("."));
+            logLocation(log, "Etc directory", Path.of("etc"));
 
             injector.getInstance(PluginInstaller.class).loadPlugins();
 
